# EchoCash

./: CMakeLists.txt  Dockerfile  README.md  app.py  bash.sh  best_model.param  currency.yaml  echocash.data  echocash.js  echocash.wasm  index.html  main.cpp  render.yaml  requirements.txt  server.py  yaml.yaml
.github/workflows/: deploy.yml  main.yml
.guthub/workflows/: deploy.yaml
static/: script.js  style.css
static/js/: script.js
templates/: index.html
workflows/: deploy.yml
